# prometheus-ecs-sd

./: Dockerfile  Makefile  README.md  discoverecs.py  pyproject.toml  requirements.txt
