[tool.poetry]
name = "prometheus-ecs-sd"
version = "1.3.0"
description = "Service discovery mechanism for ECS, writes prometheus target config to disk."
authors = ["Signal AI <ops@signal-ai.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.16.37"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
